--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,11 @@ ul a {
 .container-w {
     max-width: 1280px;
     width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper-w {
