--- a/styles/style.css
+++ b/styles/style.css
@@ -344,7 +344,14 @@ ul a {
 .container-g {
     max-width: 1000px;
     width: 100%;
+    margin: 6rem 25rem;
+    font-weight: lighter;
+    line-height: 2.5rem;
+
+
 }
+
+
 
 .container-w {
     max-width: 1280px;
